--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,3 +17,4 @@ steps:
     repository: 'bengreenier/x11-electron'
     command: 'buildAndPush'
     Dockerfile: 'Dockerfile'
+    tags: '$(Build.BuildId) latest'
