fix tags spacing
per https://docs.microsoft.com/en-us/azure/devops/pipelines/tasks/build/docker?view=azure-devops#task-inputs

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,4 +17,5 @@ steps:
     repository: 'bengreenier/x11-electron'
     command: 'buildAndPush'
     Dockerfile: 'Dockerfile'
-    tags: '$(Build.BuildId) latest'
+    tags: '$(Build.BuildId)
+    latest'
