--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,5 +17,6 @@ steps:
     repository: 'bengreenier/x11-electron'
     command: 'buildAndPush'
     Dockerfile: 'Dockerfile'
-    tags: '$(Build.BuildId)
-    latest'
+    tags: |
+      $(Build.BuildId)
+      latest
